--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Dynamic Fusion Portal</title>
-    <link rel="stylesheet" href="/static/style.css"/>
+    <link rel="stylesheet" href="static/style.css"/>
 </head>
 <body>
     <div id="welcome-screen" class="welcome-screen">
@@ -381,6 +381,6 @@
         </div>
     </div>
 
-    <script src="/static/script.js"></script>
+    <script src="static/script.js"></script>
 </body>
 </html>
